# redpen

./: .gitignore  Makefile  README.md  SPEC.md  config.toml  draft.md  goal.md  pyproject.toml  report.html
personas/: _template.md  fellow_gp.md  hn_reader.md  linkedin_reader.md  lp_allocator.md  seed_founder.md  x_reader.md
prompts/: writer.md
redpen/: __init__.py  cli.py  config.py  data.py  display.py  evaluate.py  export.py  loop.py  scorer.py  writer.py
tests/: test_scorer.py
voice/: default.toml
