[project]
name = "redpen"
version = "0.1.0"
description = "AI writing refinement engine — autoresearch for prose"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.scripts]
redpen = "redpen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
